--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -74,5 +74,12 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_horizontal" />
+
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/cv_comics_character"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_character_details_description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
